# points

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: ci.yml
CMake/: 3rdPartyPackages.cmake  Build3rdParty.cmake  BuildExternal.cmake  BuildExternalTargetLinkLibrary.cmake  CopyDllForTarget.cmake  Fetch3rdParty.cmake  SetWarnings.cmake
CMake/FindPackage/CURL/: .FindCURL.cmake.swp  FindCURL.cmake
CMake/FindPackage/SDL2/: FindSDL2.cmake
CMake/FindPackage/laszip/: Findlaszip.cmake
CMake/FindPackage/libuv/: Findlibuv.cmake
examples/: CMakeLists.txt
examples/converter/: CMakeLists.txt  converter_example.cpp
examples/converter_renderer_example/: .frustum.cpp.swp  CMakeLists.txt  converter_renderer_example.cpp  gl_renderer.cpp
examples/frustum/: CMakeLists.txt  frustum.cpp  gl_renderer.cpp  gl_renderer.h
examples/frustum/shaders/: dynpoints.frag  dynpoints.vert  points.vert  simple.frag  simple.vert  skybox.frag  skybox.vert
examples/jlp_info/: CMakeLists.txt  jlp_info.cpp
examples/renderer/: CMakeLists.txt  gl_renderer.cpp  gl_renderer.h  renderer_example.cpp
examples/renderer/shaders/: aabb.vert  dynpoints.frag  dynpoints_1.vert  dynpoints_3.vert  dynpoints_crossfade.vert  environment.frag  environment.vert  node_bbox.vert  origin_anchor.vert  skybox.vert
examples/simple_sdl/: CMakeLists.txt  glad.c  main.cpp
examples/simple_sdl/include/glad/: glad.h
src/: CMakeLists.txt
src/common/: CMakeLists.txt  deque_map.hpp  empty_dylib_function.cpp  error.cpp  error.hpp  fixed_size_vector.hpp  type_from_type.hpp  vector_updater.hpp
src/common/points/: error.h  export.h
src/common/points/common/: error.h  export.h  format.h
src/converter/: CMakeLists.txt  attributes_configs.cpp  attributes_configs.hpp  awaitable_event_pipe.hpp  azure_io_manager.cpp  azure_io_manager.hpp  blob_manager.cpp  blob_manager.hpp  byte_shuffle.cpp  byte_shuffle.hpp  cache_file_handler.cpp  cache_file_handler.hpp  cloud_signing.cpp  cloud_signing.hpp  compression_preprocess.cpp  compression_preprocess.hpp  compressor.cpp  compressor.hpp  compressor_ans.cpp  compressor_ans.hpp  compressor_blosc2.cpp  compressor_blosc2.hpp  compressor_fse.cpp  compressor_fse.hpp  compressor_zstd.cpp  compressor_zstd.hpp  conversion_types.hpp  conversion_types_p.h  converter.cpp  converter.hpp  converter_p.h  data_provider.cpp  data_provider.hpp  data_source_converter.cpp  data_source_converter.hpp  data_source_node_bbox.cpp  data_source_node_bbox.hpp  data_source_storage.cpp  data_source_storage.hpp  draw_emitter.cpp  (+84 more)
src/converter/points/converter/: converter.h  converter_data_source.h  default_attribute_names.h  error.h  export.h  laszip_file_convert_callbacks.h  storage_data_source.h
src/render/: CMakeLists.txt  aabb.hpp  aabb_p.h  buffer.cpp  buffer.hpp  buffer_data.cpp  buffer_data_p.h  buffer_p.h  camera.cpp  camera.hpp  camera_p.h  data_source.cpp  data_source.hpp  data_source_aabb.cpp  data_source_aabb.hpp  data_source_aabb_p.h  data_source_axis_gizmo.cpp  data_source_axis_gizmo.hpp  data_source_environment.cpp  data_source_environment.hpp  data_source_flat_points.cpp  data_source_flat_points.hpp  data_source_flat_points_p.h  data_source_origin_anchor.cpp  data_source_origin_anchor.hpp  data_source_p.h  data_source_sky_box_p.h  data_source_skybox.cpp  data_source_skybox.hpp  data_source_skybox_p.h  empty_dylib_function.cpp  frustum.hpp  frustum_p.h  glm_include.h  glm_include.hpp  image_decoder.cpp  image_decoder_p.h  node_data_loader.hpp  renderer.cpp  renderer.hpp  (+3 more)
src/render/points/render/: aabb.h  aabb_data_source.h  axis_gizmo_data_source.h  buffer.h  camera.h  data_source.h  draw_group.h  environment_data_source.h  export.h  flat_points_data_source.h  origin_anchor_data_source.h  renderer.h  skybox_data_source.h
src/wasm/: CMakeLists.txt  points_wasm_api.cpp
tests/: CMakeLists.txt  approx_abs.h  render_guards.h  renderer_base.cpp
tests/private/: basic_camera.cpp  basic_coroutine_test.cpp  blob_manager_test.cpp  byte_shuffle_tests.cpp  camera_arcball_tests.cpp  cloud_io_live_test.cpp  cloud_signing_test.cpp  compression_preprocess_tests.cpp  compressor_tests.cpp  converter_tests.cpp  deque_map_test.cpp  draw_emitter_tests.cpp  fixed_size_vector_tests.cpp  frame_node_registry_tests.cpp  frustum.cpp  libuv_coroutine_take_2.cpp  libuv_coroutine_test.cpp  memory_writer_tests.cpp  morton_tests.cpp  node_selector_tests.cpp  storage_backend_test.cpp  tree_tests.cpp  uv_shared_pointer.h  vector_updater_tests.cpp
tests/public/: renderer_base.cpp
tools/: CMakeLists.txt
tools/jlp_extract/: CMakeLists.txt  jlp_extract.cpp
tools/jlp_info/: CMakeLists.txt  jlp_info.cpp
